# manim-render

./: .gitignore  Dockerfile  README.md  code.text  manim-test.py  prepare-fonts.sh  pyproject.toml  render_app.py  start.sh
manim_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
